<resources>
    <string name="app_name">Recipe App</string>
    <string name="text_title_intro_first">Explore <font color="#FF672C">Thousands \n</font>of Recipes</string>
    <string name="text_desc_intro_first">You can create your own recipe here</string>
    <string name="text_title_intro_second">Feel <font color="#FF672C">Free</font> to Update</string>
    <string name="text_desc_intro_second">If recipe is not relevant anymore, \nfeel free to Update</string>
    <string name="text_title_intro_third">Feel <font color="#FF672C">Free</font> to Remove</string>
    <string name="text_desc_intro_third">If recipe is not relevant anymore, \nyou can remove easily</string>
    <string name="text_login">Login</string>
    <string name="text_hint_enter_email_login">Enter your email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_btn_login">Login</string>
    <string name="text_dont_have_account_yet">Dont have account yet?</string>
    <string name="text_navigate_to_register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_recipe">Peanut Butter and Jelly Smoothie</string>
    <string name="tv_profile_title">Profile</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="tv_change_password">Change Password</string>
    <string name="tv_logout">Logout</string>
    <string name="text_title_ingredients_detail">Ingredients</string>
    <string name="text_title_instructions_title">Instructions</string>
    <string name="label_btm_profile">Profile</string>
    <string name="label_btm_favorite">Favorite</string>
    <string name="label_btm_home">Home</string>
    <string name="text_welcome"><font color="#3D3D3D">Simple way to find \n</font><font color="#FF6838">tasty recipes</font></string>
    <string name="text_what_you_want_to_cook_today">What you want to cook today?</string>
    <string name="hint_search_recipe">Search recipe</string>
    <string name="text_popular_meal">Popular Meal</string>
    <string name="error_email_username">Please input your email adrress!</string>
    <string name="invalid_email">Email is Invalid</string>
    <string name="error_password">Please input your Password</string>
    <string name="text_succes_login">Login Success</string>
    <string name="text_error_login">Login Failed, Please check your email or password !</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_hint_enter_email">Enter Email</string>
    <string name="text_hint_enter_user_name">Create User name</string>
    <string name="text_privacy_policy">By signing up, you’re agree to our  <font color='#FF672C'><b>Terms &amp; Conditions</b></font> and <font color='#FF672C'><b>Privacy Policy</b></font> </string>
    <string name="text_to_login">Join us before? <font color='#FF672C'><b>Login</b></font></string>
    <string name="error_email_empty">Email is Required</string>
    <string name="error_email_invalid">Email is Invalid</string>
    <string name="error_password_empty">Password is Required</string>
    <string name="error_username_empty">Username is Required</string>
    <string name="text_register_success">Account Successfully Registered!</string>
    <string name="text_change_profile_success">Change Profile Success !</string>
    <string name="username_string">\@%s</string>
    <string name="text_edit_save">Save</string>
    <string name="text_edit_hint_email">Email</string>
    <string name="text_edit_username">Username</string>
    <string name="text_change_profile_photo">Change profile photo</string>
    <string name="text_edit_profile_title">Edit Profile</string>
    <string name="text_placeholder_ingredients">- %s.\n</string>
    <string name="text_logout_successful">Logout Successful</string>
    <string name="text_logout_profile">Logout Profile</string>
    <string name="text_logout_confirmation">Are you sure you want to log out?</string>
    <string name="text_logout">Logout</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_search_favorite">Search favorite</string>
    <string name="success_deleted_fav_recipe">Success deleted favorite recipe!</string>
    <string name="text_undo">Undo</string>
</resources>