<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_login_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:src="@drawable/ic_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/text_login"
                android:textColor="@color/font_primary_color"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_login_page" />

            <LinearLayout
                android:id="@+id/ll_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:boxBackgroundColor="@color/bg_app_darker_white"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/font_black_color"
                        android:padding="@dimen/_12sdp"
                        android:hint="@string/text_hint_enter_email_login"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:boxBackgroundColor="@color/bg_app_darker_white"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/font_black_color"
                        android:padding="@dimen/_12sdp"
                        android:hint="@string/text_hint_password"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/pb_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:backgroundTint="@color/primary_color"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/text_btn_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_text_navigate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_login_page">

                <TextView
                    android:id="@+id/tv_new_logistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_dont_have_account_yet"
                    android:textColor="@color/font_black_color"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_login_page" />

                <TextView
                    android:id="@+id/tv_navigate_to_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/text_navigate_to_register"
                    android:textColor="@color/font_primary_color"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintStart_toEndOf="@id/tv_new_logistics"
                    app:layout_constraintTop_toBottomOf="@id/ll_login_page" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>