<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_login_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:src="@drawable/ic_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/text_sign_up"
                android:textColor="@color/font_primary_color"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_login_page" />

            <LinearLayout
                android:id="@+id/ll_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_enter_email"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">


                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_enter_user_name"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_password"

                    android:layout_marginBottom="@dimen/_16sdp"
                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleEnabled="true">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/_30sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_login_page">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_privacy_policy"
                        android:textColor="@color/font_black_color"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ll_login_page" />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:backgroundTint="@color/primary_color"
                    android:fontFamily="@font/roboto_bold"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    app:cornerRadius="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_text_navigate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_login_page">

                <TextView
                    android:id="@+id/tv_new_logistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_to_login"
                    android:textColor="@color/font_black_color"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_login_page" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>