<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:padding="@dimen/_12sdp"
    tools:context=".ui.features.profile.editprofile.EditProfileActivity">

    <ScrollView
        android:id="@+id/sv_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_button_back"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_edit_profile_back_button"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_chevron_left" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_edit_profile_title"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/text_edit_profile_title"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_edit_profile_title">

                <ImageView
                    android:id="@+id/iv_edit_profile_pict"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_110sdp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_photo" />

                <TextView
                    android:id="@+id/tv_change_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/text_change_profile_photo"
                    android:textAlignment="center"
                    android:textColor="@color/font_primary_color"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintTop_toBottomOf="@+id/iv_edit_profile_pict" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_edit_profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_profile_picture">

                <EditText
                    android:id="@+id/et_edit_profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44sdp"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/text_edit_username"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/font_grey_color" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_edit_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_edit_profile_username">

                <EditText
                    android:id="@+id/et_edit_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44sdp"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/text_edit_hint_email"
                    android:padding="@dimen/_10sdp"
                    android:textColorHint="@color/font_grey_color" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_42sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_23sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/text_edit_save"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/cv_edit_profile_email" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="cv_edit_profile_email,cv_edit_profile_username,btn_save_edit_profile,ll_profile_picture" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>